# trading-bot

./: .gitignore  ANALYZER_DEBUG_FINDINGS.md  ANALYZER_TEST_SUMMARY.md  ARBITRAGE_TEST_REPORT.md  BACKTEST_SUMMARY.md  FUTURE_ANALYZERS.md  MARKET_MAKER_GUIDE.md  MISSING_ENDPOINTS_ANALYSIS.md  NOVICE_EXPLOITATION_GUIDE.md  ORDERBOOK_INVESTIGATION.md  ORDERBOOK_SETUP.md  QUICK_START.md  README.md  TRADE_MANAGER_README.md  analyze_market_quality.py  benchmark_analyzers.py  check_all_series.py  check_market_status.py  check_market_types.py  config_novice_exploit.yaml  debug_analyzers.py  debug_auth.py  deep_orderbook_test.py  demo_market_maker.py  demo_ml_analyzer.py  demo_ml_bot.py  examples_orderbook_usage.py  find_active_markets.py  find_active_trading.py  find_highest_volume.py  find_liquid_markets.py  hello.py  historical_backtest.py  inspect_market.py  inspect_markets.py  kalshi_client.py  live_backtest.py  main.py  market_maker_bot.py  notifier.py  (+31 more)
analyzers/: __init__.py  arbitrage_analyzer.py  base.py  bollinger_bands_analyzer.py  correlation_analyzer.py  event_volatility_analyzer.py  hype_fomo_detector.py  imbalance_analyzer.py  liquidity_trap_analyzer.py  llm_reasoning_analyzer.py  ma_crossover_analyzer.py  macd_analyzer.py  mean_reversion_analyzer.py  mispricing_analyzer.py  ml_predictor_analyzer.py  momentum_fade_analyzer.py  orderbook_depth_analyzer.py  price_extreme_reversion_analyzer.py  psychological_level_analyzer.py  recency_bias_analyzer.py  rsi_analyzer.py  spread_analyzer.py  theta_decay_analyzer.py  trend_follower_analyzer.py  value_bet_analyzer.py  (+2 more)
(+13 files in other folders)
