[project]
name = "kalshi-bot-claude"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9.0",
    "pytest-asyncio>=0.21.1",
    "pytest>=7.4.3",
    "python-dateutil>=2.8.2",
    "pytz>=2023.3",
    "pyyaml>=6.0.1",
    "requests>=2.31.0",
    "slack-sdk>=3.23.0",
    "pytest-mock>=3.12.0",
    "black>=23.12.0",
    "mypy>=1.7.1",
    "types-requests>=2.31.0",
    "types-pyyaml>=6.0.12",
]
